# vincent.bernat.ch

./: .dir-locals.el  .envrc  .gitattributes  .gitignore  README.md  browserslist  fabfile.py  flake.nix  invoke.json  invoke.yaml  linkcheckerrc  mdx_mathjax.py  package.json  pyproject.toml  requirements.txt  shell.nix  site-production.yaml  site.yaml  svgo.config.js  tasks.py
content/: .dir-locals.el  index.html  keepalive.html  nginx.conf  robots.txt
content/en/: 404.html  cv.html  debian-package-sponsoring.html  extending-xkb.html  index.html  licenses.html  meta.yaml  projects.html  sitemap.xml  theme.html  x-mozilla-status.html
content/en/blog/: 2009-privilege-separation-c.html  2011-android-samsung-galaxy-s.html  2011-css-media-query.html  2011-dns-anycast.html  2011-flash-on-debian.html  2011-fvwm-configuration.html  2011-gnome-power-manager.html  2011-ipv4-route-cache-linux.html  2011-ipv6-day.html  2011-jchroot-isolation.html  2011-keepalived-snmp-ipv6.html  2011-lab-site-to-site-vpn.html  2011-migrating-to-github.html  2011-mobile-browsing-content-optimization.html  2011-new-website-with-hyde.html  2011-plot-benchmark-results-matplotlib.html  2011-ssh-and-locales.html  2011-ssl-benchmark-round2.html  2011-ssl-benchmark.html  2011-ssl-dos-mitigation.html  2011-ssl-perfect-forward-secrecy.html  2011-ssl-session-reuse-rfc5077.html  2011-thinkpad-edge-11.html  2011-typekit-overview.html  2011-uml-network-lab.html  2011-zsh-zshrc.html  2012-awesome-wm.html  2012-extending-netsnmp.html  2012-fixing-async-agentx.html  2012-gpg-transition-new-key.html  2012-multicast-vxlan.html  2012-network-lab-kvm.html  2012-snmp-event-loop.html  2012-xbmc-debian-wheezy.html  2013-autoconf-osx-packaging.html  2013-bootstrap.c.html  2013-dailymotion-systemtap-intro.html  2013-debugging-packages-in-debian.html  2013-exabgp-highavailability.html  2013-lanco.html  (+97 more)
content/fr/: 404.html  cv.html  index.html  meta.yaml  projets.html  sitemap.xml
content/fr/blog/: 2006-these.html  2007-rmll-zabbix.html  2009-separation-privileges-c.html  2011-accelerer-navigation-3g.html  2011-adobe-flash-debian.html  2011-android-samsung-galaxy-s.html  2011-courbes-benchmarks-matplotlib.html  2011-css-media-query.html  2011-dns-anycast.html  2011-dos-ssl-solutions.html  2011-ipv6-day.html  (+122 more)
extensions/: cdn.py  combine.py  css.py  images.py  jinja.py  jpegtran.py  media.py  pygments.py  text.py  typo.py
extensions/markdown/: __init__.py  admonition.py  codeglyphs.py  codehilite_lang.py  glyphs.py  mathjax.py  media.py  responsive_table.py  shortlinks.py
layout/: also.j2  analytics.j2  atom.j2  base.j2  comments.j2  cv.j2  katex.css  links.j2  macros.j2  menu.j2  nginx.j2  outdated.j2  prevnext.j2  share.j2  sidebar.j2  sitemap.j2
(+279 files in other folders)
