[tool.poetry]
name = "www"
version = "0.0.0"
description = "Vincent Bernat's website"
authors = ["Vincent Bernat <vincent@bernat.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
Babel = "2.9.1"
Pillow = "8.3.2"
PyPDF2 = "1.26.0"
Pygments = "2.10.0"
fonttools = {version = "4.14.0", extras = ["woff", "lxml"]}
langcodes = "2.0.0"
lxml = "4.6.5"
pyquery = "1.4.1"
python-dateutil = ">=2.8"
hyde = {git = "https://github.com/vincentbernat/hyde", rev = "vbe/master"}
pygments-haproxy = {git = "https://github.com/vincentbernat/pygments-haproxy", rev = "master"}
pygments-ios = {git = "https://github.com/vincentbernat/pygments-ios", rev = "master"}
pygments-junos = {git = "https://github.com/vincentbernat/pygments-junos", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
