[tool.poetry]
name = "www"
version = "0.0.0"
description = "Vincent Bernat's website"
authors = ["Vincent Bernat <vincent@bernat.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
Babel = "2.9.*"
Pillow = "8.*"
PyPDF2 = "1.26.*"
Pygments = "2.10.*"
fonttools = {version = "4.*", extras = ["woff", "lxml"]}
langcodes = "2.*"
lxml = "4.*"
pyquery = "1.4.*"
python-dateutil = ">=2.8"
hyde = {git = "https://github.com/vincentbernat/hyde", rev = "vbe/master"}
pygments-haproxy = {git = "https://github.com/vincentbernat/pygments-haproxy", rev = "master"}
pygments-ios = {git = "https://github.com/vincentbernat/pygments-ios", rev = "master"}
pygments-junos = {git = "https://github.com/vincentbernat/pygments-junos", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
