[tool.poetry]
name = "www"
version = "0.0.0"
description = "Vincent Bernat's website"
authors = ["Vincent Bernat <vincent@bernat.ch>"]

[tool.poetry.dependencies]
python = "^3.9"
Babel = "2.*"
Pillow = "9.*"
PyPDF2 = "3.*"
Pygments = "2.*"
fonttools = {version = "4.*", extras = ["woff", "lxml"]}
langcodes = {version = "3.*", extras = ["data"]}
lxml = "4.*"
pyquery = "2.*"
python-dateutil = ">=2.8"
hyde = {git = "https://github.com/vincentbernat/hyde", branch = "vbe/master"}
pygments-haproxy = {git = "https://github.com/vincentbernat/pygments-haproxy", rev = "master"}
pygments-ios = {git = "https://github.com/vincentbernat/pygments-ios", rev = "master"}
pygments-junos = {git = "https://github.com/vincentbernat/pygments-junos", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
